--- a/client/src/index.css
+++ b/client/src/index.css
@@ -205,11 +205,11 @@
   }
 
   .input-field {
-    @apply bg-grey-50 h-[54px] focus-visible:ring-offset-0 placeholder:text-grey-500 rounded-full p-regular-16 px-4 py-3 border-none focus-visible:ring-transparent !important;
+    @apply h-[54px] focus-visible:ring-offset-0  rounded-full p-regular-16 px-4 py-3 border-none focus-visible:ring-transparent !important;
   }
 
   .textarea {
-    @apply bg-grey-50 flex flex-1 placeholder:text-grey-500 p-regular-16 px-5 py-3 border-none focus-visible:ring-transparent !important;
+    @apply flex flex-1  p-regular-16 px-5 py-3 border-none focus-visible:ring-transparent !important;
   }
 
   .button {
@@ -217,7 +217,7 @@
   }
 
   .select-item {
-    @apply py-3 cursor-pointer  focus:bg-primary-50;
+    @apply py-3 cursor-pointer;
   }
 
   .toggle-switch {
